Fix dropdown svg not showing

--- a/src/css/variables.css
+++ b/src/css/variables.css
@@ -81,7 +81,7 @@
   --billy-edit-page-form-input-font-size: 16px;
   --billy-edit-page-form-select-height: 44px;
   --billy-edit-page-form-select-width: 200px;
-  --billy-edit-page-form-select-background-image-url: url("/dist/assets/icon/select-dropdown.svg");
+  --billy-edit-page-form-select-background-image-url: url("/assets/icon/select-dropdown.svg");
   --billy-edit-page-form-select-background-position: 95%;
   --billy-edit-page-form-select-background-position-hover: 95% 58%;
   --billy-edit-page-form-select-padding: 0 10px;
